# Formation-Control-of-a-Multi-Agent-System

./: .gitattributes  .gitignore  README.md  frames_2026-05-07_11.19.50.gv  motor_test.py  qqq
config/udev/: 99-senior-design-robot.rules
docs/: robot_setup.md
driver/controller/controller/: ackermann.py
driver/controller/launch/: controller.launch.py  init_pose.launch.py  rf2o_laser_odometry.launch.py
driver/ros_robot_controller_msgs/: CMakeLists.txt
driver/ros_robot_controller_msgs/msg/: RGBState.msg  ServoState.msg
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/controller/share/controller/: package.sh  package.xml
install/interfaces/share/interfaces/: local_setup.sh  package.ps1  package.sh
install/jazzy_mecanum_driver/lib/jazzy_mecanum_driver/: jazzy_mecanum_driver
install/jazzy_mecanum_driver/share/jazzy_mecanum_driver/: package.bash  package.sh  (+4 more)
interfaces/: package.xml
log/: latest_build  latest_list
misc/: package.xml
misc/config/: amcl_params.yaml
misc/misc/: center_of_mass.py  global_ref_nav.py
multi/: package.xml  setup.cfg  setup.py
patches/: amcl_1.patch  patch_01.patch  patch_02.patch  recommended_senior_design_fixes_v2.patch  static_peers_ips_after_v2.patch
peripherals/launch/: joystick_control.launch.py  lidar_view.launch.py  usb_cam.launch.py
peripherals/launch/include/: hp60c.launch.py  ms200_scan.launch.py  sllidar_a1.launch.py  ydlidar_g4.launch.py
peripherals/rviz/: imu_view.rviz  lidar_view.rviz
scripts/: build_robot.sh  colcon_build_script.sh  enable_swap.sh  setup_robot.sh  test_controller.sh  test_lidar.sh
src/: .gitignore  motor_test.py
src/amcl_localization/: setup.py
src/amcl_localization/config/: amcl_params.yaml
src/amcl_localization/misc/: setup.py
src/calibration/: package.xml  setup.py
src/calibration/calibration/: apply_calib.py
src/calibration/config/: imu_calib.yaml
src/calibration/test/: average_imu.sh
src/formation_control/: package.xml  setup.py
src/formation_control/formation_control/: simple_aggregation.py
src/formation_control/launch/: simple_aggregation.launch.py
src/interfaces/: CMakeLists.txt
src/interfaces/srv/: SetPose2D.srv
src/jazzy_mecanum_driver/: package.xml  setup.cfg  setup.py
src/ldlidar_stl_ros2/src/: demo.cpp
src/mentorpi_description/urdf/: mentorpi.xacro  tank.xacro
src/misc/: package.xml  setup.py  setup_env.sh
src/misc/config/: mapper_params_lifelong.yaml
src/misc/launch/: nav_lifelong.launch.py  slam_mapping.launch.py
src/misc/misc/: center_of_mass.py  global_ref_nav.py
src/misc/rviz/: navigation.rviz
src/multi/multi/: formation_update.py  slave_tf_listener.py  tf_follower.py  tf_listen.py
src/multi_robot_bringup/: package.xml  setup.cfg  setup.py
src/multi_robot_bringup/config/: cyclone_dds.xml  multi_robot_costmap.yaml  nav2_params_robot1.yaml  nav2_params_robot2.yaml  nav2_params_robot3.yaml  setup_env.sh
src/multi_robot_bringup/config/maps/: map_01.pgm  map_01.yaml
src/multi_robot_bringup/launch/: hardware_bringup.launch.py  infrastructure.launch.py  multi_robot.launch.py  real_robot.launch.py  single_robot.launch.py
src/multi_robot_bringup/multi_robot_bringup/: pose_aggregator.py  pose_normalizer.py
src/multi_robot_bringup/rviz/: multi_robot.rviz
src/navigation/: package.xml  setup.py
src/navigation/config/: cyclone_dds.xml  domain_bridge.yaml  ekf_map.yaml  multi_robot_costmap.yaml  nav2_params_robot1.yaml  nav2_params_robot2.yaml  nav2_params_robot3.yaml  odom_bridge.yaml  setup_env.sh
src/navigation/config/maps/: map_01.pgm
src/navigation/launch/: hardware_bringup.launch.py  infrastructure.launch.py  multi_robot.launch.py  odom_bridge.launch.py  real_robot.launch.py  single_robot.launch.py  slam_bringup.launch.py
src/navigation/navigation/: aggregation.py  formation_control.py  formation_control_3.py  pose_aggregator.py  pose_normalizer.py  robot_pose_broadcaster.py
src/navigation/rviz/: multi_robot.rviz
src/navigation/test/: test_flake8.py  test_pep257.py
src/peripherals/launch/: imu_filter.launch.py  imu_view.launch.py  joystick_control.launch.py  lidar.launch.py  lidar_view.launch.py  teleop_key_control.launch.py
src/peripherals/peripherals/: joystick_control.py  teleop_key_control.py  tf_broadcaster_imu.py
src/rf2o_laser_odometry/: package.xml
src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
src/slam/: package.xml  setup.py
src/slam/config/: slam.yaml
src/slam/launch/: bringup.launch.py  mapping.launch.py  rtabmap_slam.launch.py  rtabmap_slam0.launch.py  rviz_rtabmap.launch.py  rviz_slam.launch.py  slam.launch.py  slam_mapping.launch.py
src/slam/maps/: frames_2026-04-29_20.53.52.gv  frames_2026-05-03_23.55.05.gv  map_01.pgm  map_01.yaml
src/slam/rviz/: slam.rviz
src/slam/slam/: map_save.py
(+470 files in other folders)
