<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation</name>
  <version>0.0.0</version>
  <description>Multi-robot bringup: independent AMCL localization per robot with shared map frame</description>
  <maintainer email="benjbanh@gmail.com">agent1</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rmw_cyclonedds_cpp</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_complementary_filter</exec_depend>
  <exec_depend>peripherals</exec_depend>
  <exec_depend>controller</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
